objects/CIP_History_Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>ActorID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ActorID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Approval History</relationshipLabel>
        <relationshipName>CIP_History_Approval_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInDays__c</fullName>
        <label>ElapsedTimeInDays</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInHours__c</fullName>
        <label>ElapsedTimeInHours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInMinutes__c</fullName>
        <label>ElapsedTimeInMinutes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalActorId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OriginalActorId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StepStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CIP History Approval History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Approval History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>